--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,14 @@
-# Use the latest available Python 3.12 slim image
-FROM python:3.12-slim
+# Use Python 3.11 slim instead of 3.12
+FROM python:3.11-slim
 
-# Set working directory inside container
 WORKDIR /app
 
-# Copy requirements and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the app
 COPY . .
 
-# Expose the port
 EXPOSE 8000
 
-# Command to run the app
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
