--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,24 @@
-# Use Python 3.11 slim instead of 3.12
+# Use Python 3.11 slim
 FROM python:3.11-slim
+
+# Install ffmpeg and dependencies
+RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
+# Copy requirements and install
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
 COPY . .
 
+# Expose port
 EXPOSE 8000
 
+# Set ffmpeg and ffprobe paths for pydub
+ENV PATH="/usr/bin:$PATH"
+
+# Run the FastAPI server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
